# afid

./: CHANGELOG.md  Cargo.toml  README.md
benches/: benchmark.rs
src/: lib.rs  main.rs
test_files/: orig beginning.txt  orig end.txt  orig.txt
test_texts/: latin1.txt
