[package]
name = "afid"
version = "0.4.0"
edition = "2021"
authors = ["Egor Kurtashkin <egorkurtashkin@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A small cmp clone"
readme = "README.md"
homepage = "https://github.com/bananaofhappiness/afid"
repository = "https://github.com/bananaofhappiness/afid"
keywords = ["cli", "diff", "file", "compare", "cmp"] 
categories = ["command-line-utilities"]


[dependencies]
clap = {version = "4.5.17", features = ["derive"]}

[dependencies.xxhash-rust]
version = "0.8.12"
features = ["xxh3"]
